# k8spractice

./: .gitignore
app/: .gitignore  README.md
app/backend/: .dockerignore  CMakeLists.txt  Dockerfile  requirements.txt
app/backend/db/: k8spractice_acl.sql  k8spractice_ddl.sql
app/backend/k8spayload/: __init__.py  auth.py  baseresponse.py  front.py
app/backend/src/: CMakeLists.txt  auth.cpp  auth.h  baseresponse.cpp  baseresponse.h  main.cpp
app/frontend/: Dockerfile  apache_httpd.conf  package-lock.json  package.json
app/frontend/public/: index.html
app/frontend/src/: basecomponent.js  home.js  index.js  load.js  loginform.js  nomenu.js
app/test/: README.md  api.auth.robot  api.robot  endtoend.robot  requirements.txt
app/test/api/: shared.robot
app/test/api/auth/: checksession.robot  login.robot  usermgt.robot
app/test/api/menu/: menu.robot
app/test/api/nomenu/: nomenu.robot
k8s-files/: backend.yaml  frontend.yaml  ingress.yaml  le-issuer.yaml  postgresql.yaml  redis.yaml
